Update footer styling and template

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,6 +168,7 @@ footer {
   border-top: 0.4rem dotted var(--bordercl);
   padding: 2rem 0rem;
   margin-top: 2rem;
+  justify-content: space-between;
 }
 .soc {
   display: flex;
